archivo final de tablas, despues de capturar las salidas queda pendiende juntarlas

--- a/scripts/test_individual.ipynb
+++ b/scripts/test_individual.ipynb
@@ -7,7 +7,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd  # Importa la biblioteca pandas para la manipulación de datos\n",
-    "import numpy as np  # Importa la biblioteca numpy para operaciones numéricas\n",
     "import os  # Importa la biblioteca os para interactuar con el sistema operativo"
    ]
   },
@@ -52,6 +51,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3984915693</td>\n",
+       "      <td>-30.197096</td>\n",
+       "      <td>-62.690208</td>\n",
+       "      <td>-44.373398</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3984932360</td>\n",
+       "      <td>-30.551563</td>\n",
+       "      <td>-62.948589</td>\n",
+       "      <td>-43.953190</td>\n",
+       "      <td>9.750986</td>\n",
+       "      <td>-2.227187</td>\n",
+       "      <td>4.825767</td>\n",
+       "      <td>1.334296</td>\n",
+       "      <td>-20.299189</td>\n",
+       "      <td>0.835103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>3984949027</td>\n",
@@ -93,52 +120,24 @@
        "      <td>11.398763</td>\n",
        "      <td>-10.473919</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>3984999028</td>\n",
-       "      <td>-29.844303</td>\n",
-       "      <td>-62.995853</td>\n",
-       "      <td>-44.846447</td>\n",
-       "      <td>7.497067</td>\n",
-       "      <td>-1.710293</td>\n",
-       "      <td>4.328116</td>\n",
-       "      <td>2.139532</td>\n",
-       "      <td>8.757843</td>\n",
-       "      <td>-0.924996</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>3985015695</td>\n",
-       "      <td>-29.647781</td>\n",
-       "      <td>-62.786247</td>\n",
-       "      <td>-45.181915</td>\n",
-       "      <td>9.356675</td>\n",
-       "      <td>-3.625352</td>\n",
-       "      <td>3.639640</td>\n",
-       "      <td>-5.949803</td>\n",
-       "      <td>14.368828</td>\n",
-       "      <td>-2.978971</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "   PacketCounter  SampleTimeFine    Euler_X    Euler_Y    Euler_Z      Acc_X  \\\n",
+       "0              0      3984915693 -30.197096 -62.690208 -44.373398   0.000000   \n",
+       "1              1      3984932360 -30.551563 -62.948589 -43.953190   9.750986   \n",
        "2              2      3984949027 -30.445217 -63.224998 -44.082458  10.143364   \n",
        "3              3      3984965694 -30.424290 -63.243576 -44.149216   9.141185   \n",
        "4              4      3984982361 -30.028954 -63.140919 -44.676098  10.031243   \n",
-       "5              5      3984999028 -29.844303 -62.995853 -44.846447   7.497067   \n",
-       "6              6      3985015695 -29.647781 -62.786247 -45.181915   9.356675   \n",
        "\n",
        "      Acc_Y     Acc_Z     Gyr_X      Gyr_Y      Gyr_Z  \n",
+       "0  0.000000  0.000000  0.000000   0.000000   0.000000  \n",
+       "1 -2.227187  4.825767  1.334296 -20.299189   0.835103  \n",
        "2 -1.478919  3.887686 -0.356548 -13.616785 -12.703153  \n",
        "3 -2.175104  3.680804 -2.146876  -1.149184  -3.376131  \n",
-       "4 -3.126371  3.203775 -4.321653  11.398763 -10.473919  \n",
-       "5 -1.710293  4.328116  2.139532   8.757843  -0.924996  \n",
-       "6 -3.625352  3.639640 -5.949803  14.368828  -2.978971  "
+       "4 -3.126371  3.203775 -4.321653  11.398763 -10.473919  "
       ]
      },
      "execution_count": 2,
@@ -147,14 +146,14 @@
     }
    ],
    "source": [
-    "archivo_csv = '../database/recordings_processed/avanzados/20240505_123031_ada_1/Xsens DOT_1_D422CD006775_20240505_122953.csv'\n",
+    "archivo_csv = '../../database/recordings_processed/avanzados/20240505_123031_ada_1/Xsens DOT_1_D422CD006775_20240505_122953.csv'\n",
     "df = pd.read_csv(archivo_csv)  # Lee el archivo CSV y lo almacena en un DataFrame\n",
-    "df[].head()  # Muestra las primeras 5 filas del DataFrame"
+    "df.head()  # Muestra las primeras 5 filas del DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,29 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9.827777777777778"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len_df = len(df)-60\n",
-    "len_df = len_df/180\n",
-    "len_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +581,7 @@
        "[10 rows x 64 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
