Se documentaron los scripts

--- a/scripts/1_clean_datasensor.ipynb
+++ b/scripts/1_clean_datasensor.ipynb
@@ -16,8 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "original_folder_path = \"C:/Users/josei/OneDrive/Documentos/CIIBI proyectos/Analisys Free Squat/database/recordings/\"\n",
-    "destination_folder_path = \"C:/Users/josei/OneDrive/Documentos/CIIBI proyectos/Analisys Free Squat/database/recordings_processed/\""
+    "original_folder_path = \"C:/Users/josei/OneDrive/Documentos/CIIBI proyectos/Analisys Free Squat/database/recordings/\" #path to the folder with the original recordings\n",
+    "destination_folder_path = \"C:/Users/josei/OneDrive/Documentos/CIIBI proyectos/Analisys Free Squat/database/recordings_processed/\" #path to the folder where the processed recordings will be saved"
    ]
   },
   {
@@ -46,20 +46,18 @@
     }
    ],
    "source": [
-    "for folder in folders:\n",
-    "    # Leer todos los archivos en la carpeta\n",
-    "    csv_files = os.listdir(original_folder_path + folder)\n",
-    "    for csv_file in csv_files:\n",
-    "        # Leer el archivo CSV omitiendo las primeras 7 líneas\n",
-    "        df = pd.read_csv(original_folder_path + folder + \"/\" + csv_file, skiprows=7)\n",
+    "for folder in folders: #for each folder in the original folder\n",
+    "\n",
+    "    csv_files = os.listdir(original_folder_path + folder) #read all files in the folder\n",
+    "    for csv_file in csv_files: #for each file in the folder\n",
     "        \n",
-    "        # Crear la carpeta de destino si no existe\n",
-    "        destination_folder = destination_folder_path + folder\n",
-    "        os.makedirs(destination_folder, exist_ok=True)\n",
+    "        df = pd.read_csv(original_folder_path + folder + \"/\" + csv_file, skiprows=7) #read the file\n",
     "        \n",
-    "        # Guardar el DataFrame como un archivo CSV en la carpeta de destino\n",
-    "        df.to_csv(os.path.join(destination_folder, csv_file), index=False)\n",
-    "    print(\"Folder \" + folder + \" processed\")"
+    "        destination_folder = destination_folder_path + folder #create the destination folder\n",
+    "        os.makedirs(destination_folder, exist_ok=True) #create the destination folder if it doesn't exist\n",
+    "        \n",
+    "        df.to_csv(os.path.join(destination_folder, csv_file), index=False) #save the file in the destination folder\n",
+    "    print(\"Folder \" + folder + \" processed\") #print the folder that was processed"
    ]
   }
  ],
